# datasette-vite

./: .gitignore  Justfile  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
datasette_vite/: __init__.py
example/: package-lock.json  package.json  vite.config.ts
example/plugins/: example_vite.py
example/src/banner/: main.ts  style.css
example/src/page/: main.ts  style.css
example/templates/pages/: vite-demo.html
tests/: conftest.py  test_stress.py  test_vite.py  test_vite_browser.py
tests/vite-fixtures/react-ts/: package-lock.json  package.json  vite.config.ts
tests/vite-fixtures/react-ts/src/: App.css  App.tsx
tests/vite-fixtures/svelte-ts/: package-lock.json  package.json  vite.config.ts
tests/vite-fixtures/svelte-ts/src/: App.svelte
tests/vite-fixtures/vanilla-ts/: package-lock.json  package.json  vite.config.ts
tests/vite-fixtures/vanilla-ts/src/: main.ts  style.css
